# MPI

./: README.md
01_vector_add/: 01_vector_add.cpp  02_vector_add_cpu.cpp  CMakeLists.txt  a.out
02_add_array/: 01_array_add.cpp  02_arraysum_mpi.cpp  CMakeLists.txt  a.out
03_mat_mult/: 01_serial_mat_mult.cpp  02_flat_mat_mult.cpp  03_mpi_mat_mult.cpp  CMakeLists.txt  a.out
